--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device.width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>wireframe lab9</title>
   <link rel="stylesheet" href="style.css">
@@ -11,8 +9,8 @@
 <body>
   <header>
   <nav>
-    <img src="https://placehold.it/200x70/111" alt="logo 200x70px">
     <ul>
+      <li><img src="https://placehold.it/200x70/111" alt="logo 200x70px"></li>   
       <li><a href="#">Nav Item1</a></li>
       <li><a href="#">Nav Item2</a></li>
       <li><a href="#">Nav Item3</a></li>
@@ -23,20 +21,20 @@
   <main>
     <img src="https://placehold.it/960x450/111" alt="">
     <ul>
-      <li><a href="https://placehold.it/300x375/111"></a></li>
-      <li><a href="https://placehold.it/300x375/111"></a></li>      
-      <li><a href="https://placehold.it/300x375/111"></a></li>
+      <li><img src=https://placehold.it/300x375/111 alt=""></li>
+      <li><img src=https://placehold.it/300x375/111 alt=""></li>
+      <li><img src=https://placehold.it/300x375/111 alt=""></li>
     </ul>
   
 
   <article>
-    <img src="https://placehold.it/480x400/111" alt="">
+
     <section>
       <h3>Feature Setting Heading</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum esse autem praesentium odio nisi saepe corrupti, excepturi cupiditate aliquid deserunt sed exercitationem cum nobis porro. Eligendi molestias natus magnam optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis nobis delectus eveniet aliquid mollitia beatae architecto voluptate similique cum, perspiciatis sequi ipsum minus excepturi esse vero quod repudiandae accusantium!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum esse autem praesentium odio nisi saepe corrupti, excepturi cupiditate aliquid deserunt sed exercitationem cum nobis porro. Eligendi molestias natus magnam optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis nobis delectus eveniet aliquid mollitia beatae architecto voluptate similique cum, perspiciatis sequi ipsum minus excepturi esse vero quod repudiandae accusantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos soluta possimus rem asperiores facilis, dicta, molestiae corporis sit deserunt, quisquam repellat harum sint eveniet vitae distinctio? Tempora velit dolor voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas obcaecati vero debitis, ipsum ex veniam neque nihil ab ratione laboriosam enim ullam voluptatem officiis voluptatibus modi, rerum minima tenetur? Repellat.</p>
       <button>Call to Action</button>
     </section>
-
+    <img src="https://placehold.it/480x400/111" alt="">
   </article>
   </main>
   <footer></footer>
