--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+  <div id="container">
   <header>
   <nav>
     <ul>
@@ -38,5 +39,6 @@
   </article>
   </main>
   <footer></footer>
+</div>
 </body>
 </html>
